<resources>
    <string name="app_name">Manni Spotter</string>
    <string name="station_search_hint">Search for station</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="live_map">Livemap</string>
    <string name="settings">Settings</string>
    <string name="updated_x_ago">Updated %s ago</string>
    <string name="preferences">Preferences</string>
    <string name="please_try_again">Please try again</string>
    <string name="search_failed">Search failed</string>
    <string name="station_name">Station name</string>
    <string name="search_description">Search for stops</string>
    <string name="plus_x_min">+%d Min</string>
    <string name="favorite_deleted">Favorite was deleted</string>
    <string name="favorite_deletion_error">An error occurred while deleting the favorite</string>
    <string name="favorize">Favorize</string>
    <string name="navigate_to">Navigate to</string>
    <string name="routes">Routes</string>
    <string name="authority">Authority</string>
    <string name="last_passage_time">Last Passage Time</string>
    <string name="first_passage_time">First Passage Time</string>
    <string name="advanced">Advanced</string>
    <string name="stopping">Stopping</string>
    <string name="time_predicted">%s - Predicted</string>
    <string name="last_updated_x">Last updated: %s</string>
    <string name="refreshing_data_failed">Refreshing data failed</string>
    <string name="route_name">Route Name</string>
    <string name="unknown">Unknown</string>
    <string name="time_planned">%s - Planned</string>
    <string name="departed">Departed</string>
    <string name="no_stops_favorited">No stops favorited yet!</string>
    <string name="favorites">Favorites</string>
    <string name="licenses">Licenses</string>
    <string name="licenses_summary">OSS Licenses</string>
    <string name="favorite_stop_to_list_it">Favorite a stop to list it here</string>
    <string name="details">Details</string>
    <string name="stop_points">Stop Points</string>
    <string name="x_kilometer_short">%.2f km</string>
    <string name="x_meter_short">%.2f m</string>
    <string name="nearby">Nearby</string>
    <string name="request">Request</string>
    <string name="request_location_permission_description">In order to provide you with nearby stops you must allow access to Location Information</string>
    <string name="menu">Menu</string>
    <string name="requesting_location_permission">Requesting location permission</string>
    <string name="no_nearby_stops_found_yet">No nearby stops found yet</string>
    <string name="update">Update</string>
    <string name="update_available">Update available</string>
    <string name="loading_departures">Loading departures</string>
    <string name="retry">Retry</string>
    <string name="error_loading_departures">An error occured while loading departures</string>
    <string name="first_setup_description">During the first setup the app needs to synchronize some data in order to work properly. An internet connection is required for this process!</string>
    <string name="setup">Setup</string>
    <string name="synchronize">Synchronize</string>
    <string name="synchronizing_ellipsis">Synchronizing&#8230;</string>
    <string name="an_error_occured_check_internet">An Error occured. Consider checking your internet connection and please try again!</string>
    <string name="proceed">Proceed</string>
    <string name="successfully_synchronized">Successfully synchronized</string>
    <string name="next">Next</string>
    <string name="previos">Previos</string>
    <string name="ask_for_location_description">In order to show stops near you this app needs access to your location. You can enable this later in the settings too.</string>
    <string name="location">Location</string>
    <string name="grant_access">Grant Access</string>
    <string name="access_granted">Access Granted</string>
    <string name="delete_favorite">Delete Favorite</string>
    <string name="setup_favorites_description">Select your favorite stops above to get quick access to them within the app.</string>
    <string name="welcome">Welcome</string>
    <string name="location_permission_summary">Grant this app access to your current location so it can display you stops nearby.</string>
    <string name="location_permission">Location Permission</string>
    <string name="location_permission_summary_on">Location permission is granted. Nearby stops will be displayed if your device can be located.</string>
    <string name="location_permission_summary_off">No location permission is granted. No nearby stops will be displayed!</string>
    <string name="app_version_summary">The current App Version</string>
    <string name="app_version">App Version</string>
    <string name="general">General</string>
    <string name="synchronization">Synchronization</string>
    <string name="synchronization_summary">Synchronize the local database</string>
    <string name="stops">Stops</string>
    <string name="x_stop_points_synchronized">%d Stoppoints synchronized</string>
    <string name="x_stops_synchronized">%d Stops synchronized</string>
    <string name="departures">Departures</string>
    <string name="map">Map</string>
    <string name="stop_removed_from_favorites">Stop removed from Favorites</string>
    <string name="stop_favorited">Stop favorited</string>
</resources>
