<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activities.MainActivity">
    <item android:id="@id/action_search"
          android:title="@string/search"
          android:icon="@drawable/ic_search_white_24dp"
          app:actionViewClass="android.support.v7.widget.SearchView"
          app:showAsAction="ifRoom|collapseActionView"/>
    <item android:id="@id/action_live_map"
          android:title="@string/live_map"
          android:icon="@drawable/ic_search_black_24dp"
          app:showAsAction="never"/>
    <item android:id="@id/action_settings"
          android:title="@string/settings"
          android:icon="@drawable/ic_search_black_24dp"
          app:showAsAction="never"/>
</menu>