<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.semeshky.kvgspotter.activities.StationDetailActivity">

    <data>

        <variable
            name="station"
            type="com.semeshky.kvg.kvgapi.Station"/>
        <import type="com.semeshky.kvgspotter.util.JodaUtil"/>
    </data>

    <android.support.v4.widget.NestedScrollView
        android:id="@id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/view_map_lite"
                     android:id="@id/mapView"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     app:layout_constraintDimensionRatio="16:9"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     android:clickable="false"/>
            <TextView
                android:paddingEnd="@dimen/list_single_line_horizontal_padding"
                android:paddingStart="@dimen/list_single_line_horizontal_padding"
                android:id="@id/txtTitle"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:text="@{station.stopName,default=PLACEHOLDER}"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="start|center_vertical"
                app:layout_constraintTop_toBottomOf="@id/mapView"/>

            <TextView
                android:paddingEnd="@dimen/list_single_line_horizontal_padding"
                android:paddingStart="@dimen/list_single_line_horizontal_padding"
                android:id="@+id/txtRoutesTitle"
                android:text="@string/routes"
                android:layout_width="0dp"
                android:layout_height="@dimen/tile_height_subhead"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="start|center_vertical"
                app:layout_constraintTop_toBottomOf="@id/txtTitle"/>
            <android.support.v7.widget.RecyclerView
                android:id="@id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtRoutesTitle">

            </android.support.v7.widget.RecyclerView>
            <TextView
                android:paddingEnd="@dimen/list_single_line_horizontal_padding"
                android:paddingStart="@dimen/list_single_line_horizontal_padding"
                android:id="@+id/txtSubheadAdvanced"
                android:text="@string/advanced"
                android:layout_width="0dp"
                android:layout_height="@dimen/tile_height_subhead"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="start|center_vertical"
                app:layout_constraintTop_toBottomOf="@id/recyclerView"/>
            <TextView
                android:paddingEnd="@dimen/list_single_line_horizontal_padding"
                android:paddingStart="@dimen/list_single_line_horizontal_padding"
                android:id="@+id/txtFirstPassageTimeDesc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtSubheadAdvanced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_passage_time"
                android:gravity="start"/>
            <TextView
                android:paddingEnd="@dimen/list_single_line_horizontal_padding"
                android:paddingStart="@dimen/list_single_line_horizontal_padding"
                app:layout_constraintStart_toEndOf="@id/txtFirstPassageTimeDesc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/txtFirstPassageTimeDesc"
                app:layout_constraintBottom_toBottomOf="@id/txtFirstPassageTimeDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{JodaUtil.timestampToLocalTime(station.firstPassageTime), default=PLACEHOLDER}"
                android:gravity="end"/>
            <TextView
                android:paddingEnd="@dimen/list_single_line_horizontal_padding"
                android:paddingStart="@dimen/list_single_line_horizontal_padding"
                android:id="@+id/txtLastPassageTimeDesc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtFirstPassageTimeDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_passage_time"
                android:gravity="start"/>
            <TextView
                android:paddingEnd="@dimen/list_single_line_horizontal_padding"
                android:paddingStart="@dimen/list_single_line_horizontal_padding"
                app:layout_constraintStart_toEndOf="@id/txtLastPassageTimeDesc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/txtLastPassageTimeDesc"
                app:layout_constraintBottom_toBottomOf="@id/txtLastPassageTimeDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{JodaUtil.timestampToLocalTime(station.lastPassageTime), default=PLACEHOLDER}"
                android:gravity="end"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</layout>